--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="text">
 				<img src="img/skobki.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.</p>
-				<img src="img/signature.png" alt="">
+				<img src="img/signature.png" alt="" id="pod">
 				<h2>Deniel Croft</h2>
 				<h3>Creative Designer, Levy</h3>
 			</div>
