--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script src="js/go_top.js"></script>
 </head>
 <body>
+	<a href="#" id="go-top" title="Вверх">
+		<i class="fa fa-arrow-up" aria-hidden="true"></i>
+	</a>
 	<div class="container1">
 		<header>
 			<div class="logo"><img src="img/logo.png" alt=""></div>
