--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/adapt.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/adapt1080.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
+	<script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="js/go_top.js"></script>
 </head>
@@ -19,23 +24,23 @@
 	</a>
 	<div class="container1">
 		<header>
-			<div class="logo"><img src="img/logo.png" alt=""></div>
-			<div class="menu">
+			<div class="logo wow zoomIn"><img src="img/logo.png" alt=""></div>
+			<div class="menu wow zoomIn">
 				<i class="fa fa-bars" aria-hidden="true"></i>
 			</div>
 		</header>
-		<div class="text">
-			<hr>
+		<div class="text wow slideInUp">
+			<hr class="wow fadeInLeftBig">
 			<h1>PAUL LAPKIN</h1>
-			<hr>
-			<p>#User Experience   #Music   #Creative  Direction</p>
+			<hr class="wow fadeInRightBig">
+			<p class="wow fadeInUpBig">#User Experience   #Music   #Creative  Direction</p>
 		</div>
 	</div>
 	<!-- =================================== -->
 	<div class="container2">
 		<div class="content">
-			<img src="img/01.png" alt="">
-			<div class="text2">
+			<img src="img/01.png" alt="" class="wow fadeInLeft">
+			<div class="text2 wow fadeInRight">
 				<h2>Hi, i’m Paul Lapkin, Experience Crafter from Canada.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.
 					<br>
@@ -50,7 +55,7 @@
 	<div class="container3">
 		<h2>My Working Process</h2>
 		<p>Hi, i’m Paul Lapkin, Experience Crafter from Canada.</p>
-		<div class="images">
+		<div class="images wow slideInUp">
 			<div class="box"><img src="img/monitor.png" alt="">
 				<p>DESIGN</p></div>
 			<div class="box"><img src="img/magic-wand.png" alt="">
@@ -64,7 +69,7 @@
 	<!-- 4 ========================= -->
 	<div class="container4">
 		<div class="content">
-			<div class="tx">
+			<div class="tx wow fadeInLeft">
 				<h1>WORK EXPERIENCE</h1>
 				<h2>Mad Max Design</h2>
 				<h2>OCT 2014 - june 2018</h2>
@@ -74,7 +79,7 @@
 				<h2>OCT 2017 - june 2018</h2>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 			</div>
-			<div class="tx">
+			<div class="tx wow fadeInRight">
 				<h1>EDUCATION</h1>
 				<h2>Maddison University</h2>
 				<h2>OCT 2014 - june 2018</h2>
@@ -90,7 +95,7 @@
 	<div class="container5">
 			<h1>My Latest Works</h1>
 			<p>Hi, i’m Paul Lapkin, Experience Crafter from Canada.</p>
-		<div class="content">
+		<div class="content wow fadeInUp">
 				<div class="box"></div>
 				<div class="box"></div>
 				<div class="box"></div>
@@ -103,20 +108,20 @@
 	<!-- ============================== -->
 	<div class="container6">
 		<div class="content">
-			<div class="text">
+			<div class="text wow fadeInLeft">
 				<img src="img/skobki.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.</p>
 				<img src="img/signature.png" alt="" id="pod">
 				<h2>Deniel Croft</h2>
 				<h3>Creative Designer, Levy</h3>
 			</div>
-			<img src="img/man2.png" alt="">
+			<img src="img/man2.png" alt="" class="wow fadeInRight">
 		</div>
 	</div>
 	<!-- ==================== -->
 	<div class="container7">
 		<div class="content">
-			<div class="box">
+			<div class="box wow fadeInLeft">
 				<h1>LEAVE A MESSAGE</h1>
 				<input type="text" name="name*" placeholder="Name*">
 				<input type="text" name="Email*" placeholder="Email*">
@@ -126,7 +131,7 @@
 			</div>
 
 
-			<div class="box1">
+			<div class="box1 wow fadeInRight">
 				<div class="block">
 					<h1>ADDRESS</h1>
 					<p>Gulshan Sales Office. SA Tower (Level-5), Plot#1, Road#134, <br> Block SE(A), Gulshan-1, Dhaka 1212.</p>
@@ -141,7 +146,7 @@
 		</div>
 	</div>
 	<footer>
-		<div class="icon">
+		<div class="icon wow fadeInUp">
 			<i class="fa fa-twitter" aria-hidden="true"></i>
 			<i class="fa fa-instagram" aria-hidden="true"></i>
 			<i class="fa fa-behance" aria-hidden="true"></i>
