--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			</div>
 		</header>
 		<div class="text wow slideInUp">
-			<hr class="wow fadeInLeftBig">
+			<hr class="wow fadeInLeftBi">
 			<h1>PAUL LAPKIN</h1>
-			<hr class="wow fadeInRightBig">
+			<hr class="wow fadeInRightBi">
 			<p class="wow fadeInUpBig">#User Experience   #Music   #Creative  Direction</p>
 		</div>
 	</div>
